--- a/.github/workflows/url-gathering.yaml
+++ b/.github/workflows/url-gathering.yaml
@@ -1,169 +1,327 @@
-name: "XSS Tools Execution"
+name: Parallel Bug Hunt - Part1
 
 on:
-  workflow_run:
-    workflows: ["Parallel Bug Hunt - Part1"] # نام workflow اول
-    types: [completed]
+  workflow_dispatch:
+    inputs:
+      domain:
+        description: 'Target domain (e.g., example.com)'
+        required: true
+        type: string
+      headers:
+        description: 'Custom headers (optional, e.g., "Cookie: session=abc123")'
+        required: false
+        type: string
+        default: ''
 
 jobs:
-  # Job 1: Run httpx on dynamic URLs (parallel chunks)
-  httpx-scan:
+  # Job 1: Passive enumeration with waybackurls
+  passive-wayback:
     runs-on: ubuntu-latest
-    # Check if the previous workflow run was successful
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    strategy:
-      matrix:
-        chunk: [1, 2, 3, 4, 5, 6, 7, 8]
     steps:
-      - name: Download combined results from previous stage
-        uses: dawidd6/action-download-artifact@v2
-        with:
-          workflow: Parallel Bug Hunt - Part1
-          workflow_conclusion: success
-          name: combined-results
-          path: combined-results/
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Install httpx with PATH fix
+      - name: Install basic tools
         run: |
-          echo "Installing httpx..."
-          go install github.com/projectdiscovery/httpx/cmd/httpx@latest
-          echo "export PATH=\$PATH:\$(go env GOPATH)/bin" >> $GITHUB_ENV
-          export PATH=$PATH:$(go env GOPATH)/bin
-          echo "Go PATH: $(go env GOPATH)"
-          echo "Current PATH: $PATH"
-          echo "httpx location: $(which httpx || echo 'not found in PATH')"
-          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+          sudo apt update
+          sudo apt install -y curl wget jq
 
-      - name: Run httpx on chunk
+      - name: Install waybackurls
         run: |
-          mkdir -p httpx-results-${{ matrix.chunk }}
-          export PATH=$PATH:$(go env GOPATH)/bin
-          if [[ -f "combined-results/dynamic-urls.txt" ]] && [[ -s "combined-results/dynamic-urls.txt" ]]; then
-            TOTAL_LINES=$(wc -l < combined-results/dynamic-urls.txt)
-            LINES_PER_CHUNK=$((TOTAL_LINES / 8 + 1))
-            START_LINE=$((((${{ matrix.chunk }} - 1) * LINES_PER_CHUNK) + 1))
-            END_LINE=$((${{ matrix.chunk }} * LINES_PER_CHUNK))
-            sed -n "${START_LINE},${END_LINE}p" combined-results/dynamic-urls.txt > chunk-${{ matrix.chunk }}.txt
-            if [[ -s "chunk-${{ matrix.chunk }}.txt" ]]; then
-              echo "Processing chunk ${{ matrix.chunk }} with $(wc -l < chunk-${{ matrix.chunk }}.txt) URLs"
-              cat chunk-${{ matrix.chunk }}.txt | httpx -silent -threads 30 -timeout 10 -retries 2 -status-code -follow-redirects -rate-limit 10 > httpx-results-${{ matrix.chunk }}/httpx.txt || {
-                echo "httpx failed for chunk ${{ matrix.chunk }}, using input URLs as fallback"
-                cp chunk-${{ matrix.chunk }}.txt httpx-results-${{ matrix.chunk }}/httpx.txt
-              }
-            else
-              touch httpx-results-${{ matrix.chunk }}/httpx.txt
-            fi
-          else
-            touch httpx-results-${{ matrix.chunk }}/httpx.txt
-          fi
-          ALIVE_COUNT=$(wc -l < httpx-results-${{ matrix.chunk }}/httpx.txt)
-          echo "Chunk ${{ matrix.chunk }} found $ALIVE_COUNT alive URLs"
+          # Method 1: Try direct binary download
+          echo "Trying direct binary download..."
+          ARCH="linux-amd64"
 
-      - name: Upload httpx results
-        uses: actions/upload-artifact@v4
-        with:
-          name: httpx-results-${{ matrix.chunk }}
-          path: httpx-results-${{ matrix.chunk }}/
+          # Get latest release info
+          LATEST=$(curl -s https://api.github.com/repos/tomnomnom/waybackurls/releases/latest)
+          VERSION=$(echo "$LATEST" | jq -r '.tag_name')
 
-  # Job 2: Run x8 parameter bruteforce (parallel)
-  x8-scan:
-    needs: httpx-scan
-    runs-on: ubuntu-latest
-    # Check if the previous workflow run was successful
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    strategy:
-      matrix:
-        chunk: [1, 2, 3, 4]
-    steps:
-      - name: Download combined results
-        uses: dawidd6/action-download-artifact@v2
-        with:
-          workflow: Parallel Bug Hunt - Part1
-          workflow_conclusion: success
-          name: combined-results
-          path: combined-results/
+          echo "Found version: $VERSION"
 
-      - name: Download all httpx results
-        uses: actions/download-artifact@v4
-        with:
-          pattern: httpx-results-*
-          merge-multiple: true
-        continue-on-error: true
+          # Try different download patterns
+          URLS=(
+            "https://github.com/tomnomnom/waybackurls/releases/download/${VERSION}/waybackurls-${ARCH}-${VERSION}.tgz"
+            "https://github.com/tomnomnom/waybackurls/releases/download/${VERSION}/waybackurls_${ARCH}"
+            "https://github.com/tomnomnom/waybackurls/releases/download/${VERSION}/waybackurls_linux_amd64"
+          )
 
-      - name: Install x8
-        run: |
-          wget https://github.com/Sh1Yo/x8/releases/latest/download/x8-linux-x86_64 -O x8 && chmod +x x8 && sudo mv x8 /usr/local/bin/ && command -v x8 && echo "x8 installed via direct download" && exit 0 || echo "Direct download failed, trying cargo..."
-          curl https://sh.rustup.rs -sSf | sh -s -- -y
-          source "$HOME/.cargo/env"
-          cargo install x8 && echo "x8 installed via cargo" && exit 0 || echo "Cargo install failed, trying build from source..."
-          if command -v go >/dev/null 2>&1; then
-            if ! command -v x8 >/dev/null 2>&1; then
-              echo "Building from source failed. Creating a fallback script..."
-            fi
-          fi
-          # Corrected fallback script using simplified echo commands and proper chmod
-          echo '#!/bin/bash' > /usr/local/bin/x8_fallback.sh
-          echo 'echo "Simulating x8 functionality: URL="$1\" WORDLIST=\"$2""' >> /usr/local/bin/x8_fallback.sh
-          echo 'echo "Error: Fallback script executed. Real x8 not found. Please check installation."' >> /usr/local/bin/x8_fallback.sh
-          chmod +x /usr/local/bin/x8_fallback.sh
-          if ! command -v x8 >/dev/null 2>&1; then
-              echo "x8 not found, using fallback script via alias."
-              echo "alias x8='/usr/local/bin/x8_fallback.sh'" >> $GITHUB_ENV
-              export PATH=$PATH:/usr/local/bin
-          else
-            echo "x8 found in PATH."
-          fi
+          INSTALLED=false
+          for url in "${URLS[@]}"; do
+            echo "Trying: $url"
+            if wget -q "$url" -O waybackurls_download 2>/dev/null; then
+              echo "Downloaded successfully from: $url"
 
-      - name: Combine httpx results and run x8
-        run: |
-          mkdir -p x8-results-${{ matrix.chunk }}
-          find . -name "httpx-results-*" -type d -exec cat {}/*.txt \; | grep '?' | sort -u > dynamic-alive.txt || true
-          if [[ -s "dynamic-alive.txt" ]] && [[ -s "combined-results/unfurl-params.txt" ]]; then
-            TOTAL_LINES=$(wc -l < dynamic-alive.txt)
-            LINES_PER_CHUNK=$((TOTAL_LINES / 4 + 1))
-            START_LINE=$((((${{ matrix.chunk }} - 1) * LINES_PER_CHUNK) + 1))
-            END_LINE=$((${{ matrix.chunk }} * LINES_PER_CHUNK))
-            sed -n "${START_LINE},${END_LINE}p" dynamic-alive.txt > x8-chunk-${{ matrix.chunk }}.txt
-            if [[ -s "x8-chunk-${{ matrix.chunk }}.txt" ]]; then
-              if [[ -n "${{ github.event.inputs.headers }}" ]]; then
-                cat x8-chunk-${{ matrix.chunk }}.txt | xargs -P 4 -I{} x8 -u "{}" -w combined-results/unfurl-params.txt -X GET POST -H "${{ github.event.inputs.headers }}" > x8-results-${{ matrix.chunk }}/x8.txt || true
+              # Check if it's a tar file
+              if file waybackurls_download | grep -q "gzip"; then
+                echo "Extracting tar.gz file..."
+                tar -xzf waybackurls_download
+                find . -name "waybackurls" -type f -executable | head -1 | xargs -I{} cp {} waybackurls_binary
               else
-                cat x8-chunk-${{ matrix.chunk }}.txt | xargs -P 4 -I{} x8 -u "{}" -w combined-results/unfurl-params.txt -X GET POST > x8-results-${{ matrix.chunk }}/x8.txt || true
+                echo "Using direct binary..."
+                cp waybackurls_download waybackurls_binary
               fi
-            else
-              touch x8-results-${{ matrix.chunk }}/x8.txt
+
+              chmod +x waybackurls_binary
+              sudo mv waybackurls_binary /usr/local/bin/waybackurls
+
+              # Test installation
+              if waybackurls --help >/dev/null 2>&1 || waybackurls -h >/dev/null 2>&1; then
+                echo "waybackurls installed successfully"
+                INSTALLED=true
+                break
+              fi
             fi
-          else
-            touch x8-results-${{ matrix.chunk }}/x8.txt
+          done
+
+          # Fallback: Install Go and build from source
+          if [ "$INSTALLED" = false ]; then
+            echo "Binary installation failed, trying Go installation..."
+            sudo apt install -y golang-go
+            export PATH=$PATH:/usr/local/go/bin:~/go/bin
+            go install github.com/tomnomnom/waybackurls@latest
+            sudo cp ~/go/bin/waybackurls /usr/local/bin/ 2>/dev/null || echo "waybackurls available in ~/go/bin/"
+            export PATH="$HOME/go/bin:$PATH"
           fi
 
-      - name: Upload x8 results
+      - name: Run waybackurls
+        run: |
+          DOMAIN="${{ inputs.domain }}"
+          mkdir -p waybackurls-results
+
+          echo "Testing waybackurls installation..."
+          which waybackurls || echo "waybackurls not in PATH"
+
+          # Add go bin to PATH if needed
+          export PATH="$HOME/go/bin:/usr/local/bin:$PATH"
+
+          echo "Running waybackurls for: $DOMAIN"
+
+          # Try different approaches
+          if command -v waybackurls >/dev/null 2>&1; then
+            echo "$DOMAIN" | waybackurls > waybackurls-results/waybackurls.txt 2>&1 || {
+              echo "waybackurls failed, creating empty file"
+              touch waybackurls-results/waybackurls.txt
+            }
+          else
+            echo "waybackurls not found, creating empty file"
+            touch waybackurls-results/waybackurls.txt
+          fi
+
+          WAYBACK_COUNT=$(wc -l < waybackurls-results/waybackurls.txt)
+          echo "Waybackurls found $WAYBACK_COUNT URLs"
+
+          # Add some manual URLs as fallback
+          echo "https://${DOMAIN}/" >> waybackurls-results/waybackurls.txt
+          echo "https://www.${DOMAIN}/" >> waybackurls-results/waybackurls.txt
+          echo "https://${DOMAIN}/admin" >> waybackurls-results/waybackurls.txt
+          echo "https://${DOMAIN}/login" >> waybackurls-results/waybackurls.txt
+          echo "https://${DOMAIN}/api" >> waybackurls-results/waybackurls.txt
+
+      - name: Upload waybackurls results
         uses: actions/upload-artifact@v4
         with:
-          name: x8-results-${{ matrix.chunk }}
-          path: x8-results-${{ matrix.chunk }}/
+          name: wayback-results
+          path: waybackurls-results/
 
-  # Job 3: Run kxss (parallel)
-  kxss-scan:
-    needs: httpx-scan
+  # Job 2: Passive enumeration with gau
+  passive-gau:
     runs-on: ubuntu-latest
-    # Check if the previous workflow run was successful
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    strategy:
-      matrix:
-        chunk: [1, 2, 3, 4, 5, 6]
     steps:
-      - name: Download combined results
-        uses: dawidd6/action-download-artifact@v2
-        with:
-          workflow: Parallel Bug Hunt - Part1
-          workflow_conclusion: success
-          name: combined-results
-          path: combined-results/
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Download all httpx results
+      - name: Install Go and gau
+        run: |
+          # Install Go
+          sudo apt update
+          sudo apt install -y golang-go curl
+
+          # Set up Go environment
+          export GOPATH=$HOME/go
+          export PATH=$PATH:/usr/local/go/bin:$GOPATH/bin
+          echo "export PATH=\$PATH:/usr/local/go/bin:\$HOME/go/bin" >> ~/.bashrc
+
+          # Install gau
+          echo "Installing gau..."
+          go install github.com/lc/gau/v2/cmd/gau@latest
+
+          # Copy to system bin
+          sudo cp $HOME/go/bin/gau /usr/local/bin/ 2>/dev/null || echo "gau available in ~/go/bin/"
+
+          # Add to PATH for this session
+          echo "$HOME/go/bin" >> $GITHUB_PATH
+
+      - name: Run gau
+        run: |
+          DOMAIN="${{ inputs.domain }}"
+          mkdir -p gau-results
+
+          # Set PATH
+          export PATH="$HOME/go/bin:/usr/local/bin:$PATH"
+
+          echo "Testing gau installation..."
+          which gau || echo "gau not in standard PATH"
+
+          echo "Running gau for: $DOMAIN"
+
+          if command -v gau >/dev/null 2>&1; then
+            timeout 300 gau "$DOMAIN" --threads 3 --subs > gau-results/gau.txt 2>&1 || {
+              echo "gau failed or timed out, checking partial results..."
+              touch gau-results/gau.txt
+            }
+          else
+            echo "gau not found, creating empty file"
+            touch gau-results/gau.txt
+          fi
+
+          GAU_COUNT=$(wc -l < gau-results/gau.txt)
+          echo "GAU found $GAU_COUNT URLs"
+
+          # Add some manual URLs as fallback
+          echo "https://${DOMAIN}/search?q=test" >> gau-results/gau.txt
+          echo "https://${DOMAIN}/page?id=1" >> gau-results/gau.txt
+          echo "https://api.${DOMAIN}/v1/users?limit=10" >> gau-results/gau.txt
+
+      - name: Upload gau results
+        uses: actions/upload-artifact@v4
+        with:
+          name: gau-results
+          path: gau-results/
+
+  # Job 3: Combine results and prepare for httpx
+  combine-results:
+    needs: [passive-wayback, passive-gau]
+    runs-on: ubuntu-latest
+    outputs:
+      dynamic-urls-count: ${{ steps.count.outputs.dynamic }}
+      total-urls-count: ${{ steps.count.outputs.total }}
+    steps:
+      - name: Download wayback results
         uses: actions/download-artifact@v4
         with:
-          pattern: httpx-results-*
-          merge-multiple: true
-        continue-on-error: true
+          name: wayback-results
+          path: passive-wayback/
+
+      - name: Download gau results
+        uses: actions/download-artifact@v4
+        with:
+          name: gau-results
+          path: passive-gau/
+
+      - name: Install tools
+        run: |
+          sudo apt update
+          sudo apt install -y jq moreutils golang-go curl
+
+          # Install Go tools
+          export PATH="$HOME/go/bin:$PATH"
+          go install github.com/tomnomnom/anew@latest
+          go install github.com/tomnomnom/unfurl@latest
+
+          # Copy to system bin
+          sudo cp $HOME/go/bin/* /usr/local/bin/ 2>/dev/null || echo "Tools available in ~/go/bin/"
+          echo "$HOME/go/bin" >> $GITHUB_PATH
+
+      - name: Combine and filter results
+        run: |
+          mkdir -p combined-results
+
+          # Set PATH
+          export PATH="$HOME/go/bin:/usr/local/bin:$PATH"
+
+          # Extensions to filter out
+          EXTS='(json|js|css|jpg|jpeg|png|svg|gif|exe|mp4|flv|pdf|doc|webm|wmv|webp|mov|mp3|avi|zip)($|\?)'
+
+          # Root URL
+          echo "https://${{ inputs.domain }}/" > all-urls.tmp
+
+          # Combine all URLs
+          cat passive-wayback/waybackurls.txt >> all-urls.tmp || true
+          cat passive-gau/gau.txt >> all-urls.tmp || true
+
+          # Add some common paths with parameters for testing
+          cat >> all-urls.tmp << 'EOF'
+          https://${{ inputs.domain }}/search?q=test&category=all
+          https://${{ inputs.domain }}/login?redirect=%2Fdashboard
+          https://${{ inputs.domain }}/api/users?id=1&format=json
+          https://${{ inputs.domain }}/product?id=123&color=red
+          https://www.${{ inputs.domain }}/page?ref=home&utm_source=google
+          https://${{ inputs.domain }}/contact?subject=hello&name=test
+          EOF
+
+          # Filter and create final URL list
+          sort -u all-urls.tmp | grep -iEv "\.${EXTS}" | awk 'NF' > combined-results/all-urls.txt
+
+          # Extract parameters
+          if command -v unfurl >/dev/null 2>&1; then
+            unfurl --unique keys < combined-results/all-urls.txt | sort -u > combined-results/unfurl-params.txt
+          else
+            # Fallback parameter extraction
+            grep '?' combined-results/all-urls.txt | while IFS= read -r url; do
+              query="${url#*\?}"
+              echo "$query" | sed 's/&/\n/g' | sed 's/=.*//' | grep -v '^$'
+            done | sort -u > combined-results/unfurl-params.txt
+          fi
+
+          # Add common parameters if file is empty/small
+          if [ $(wc -l < combined-results/unfurl-params.txt) -lt 5 ]; then
+            cat >> combined-results/unfurl-params.txt << 'EOF'
+          id
+          q
+          search
+          query
+          page
+          limit
+          offset
+          sort
+          filter
+          category
+          name
+          email
+          user
+          redirect
+          url
+          callback
+          ref
+          source
+          utm_source
+          debug
+          test
+          EOF
+            sort -u combined-results/unfurl-params.txt -o combined-results/unfurl-params.txt
+          fi
+
+          # Separate static and dynamic URLs
+          grep -v '?' combined-results/all-urls.txt > combined-results/static-urls.txt || true
+          grep '?' combined-results/all-urls.txt > combined-results/dynamic-urls.txt || true
+
+          # Clean up
+          rm -f all-urls.tmp
+
+      - name: Count URLs for matrix
+        id: count
+        run: |
+          DYNAMIC=$(wc -l < combined-results/dynamic-urls.txt)
+          TOTAL=$(wc -l < combined-results/all-urls.txt)
+          echo "dynamic=$DYNAMIC" >> $GITHUB_OUTPUT
+          echo "total=$TOTAL" >> $GITHUB_OUTPUT
+          echo "Found $DYNAMIC dynamic URLs, $TOTAL total URLs"
+
+      - name: Upload combined results
+        uses: actions/upload-artifact@v4
+        with:
+          name: combined-results
+          path: combined-results/
+          retention-days: 5
+
+      - name: Save domain input to artifact
+        run: |
+          mkdir -p input-parameters
+          echo "${{ inputs.domain }}" > input-parameters/domain.txt
+          echo "${{ inputs.headers }}" > input-parameters/headers.txt
+
+      - name: Upload input parameters
+        uses: actions/upload-artifact@v4
+        with:
+          name: input-parameters
+          path: input-parameters/
